--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "on-covid-19": "^0.1.3",
+    "response-time": "^2.3.2",
     "validate": "^5.1.0"
   },
   "devDependencies": {
