--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "on-covid-19": "^0.1.3",
-    "response-time": "^2.3.2",
     "validate": "^5.1.0"
   },
   "devDependencies": {
