--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "on-covid-19": "^0.1.3",
-    "validate": "^5.1.0"
+    "validate": "^5.1.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
